syntax = "proto3";

package auth;

service AuthService {
  rpc Login (LoginRequest) returns (TokenResponse);
  rpc Signup (SignupRequest) returns (MessageResponse);
  rpc RequestPasswordReset (ResetRequest) returns (MessageResponse);
  rpc ResetPassword (ResetPasswordInput) returns (MessageResponse);
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message SignupRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message ResetRequest {
  string email = 1;
}

message ResetPasswordInput {
  string token = 1;
  string newPassword = 2;
}

message TokenResponse {
  string access_token = 1;
}

message MessageResponse {
  string message = 1;
}