syntax = "proto3";

package userinfo;

service UserService {
  rpc GetUserByIdInfo (GetUserByIdRequest) returns (UserResponse);
  rpc GetUsersByIds (GetUsersByIdsRequest) returns (UsersResponse);
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse);
  rpc CheckUserExists (CheckUserExistsRequest) returns (CheckUserExistsResponse);
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUsersByIdsRequest {
  repeated int32 ids = 1;
}

message ValidateUserRequest {
  int32 userId = 1;
  optional string email = 2;
}

message CheckUserExistsRequest {
  int32 userId = 1;
}

message UserResponse {
  int32 id = 1;
  string email = 2;
  string name = 3;
  string role = 4;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

message ValidateUserResponse {
  bool exists = 1;
  optional UserResponse user = 2;
}

message CheckUserExistsResponse {
  bool exists = 1;
}